testsuite/bsc.options/OptionsAttrBad3.bsv
(* synthesize, options="-aggressive-conditions arg" *)
module sysOptionsAttrBad3 ();
endmodule

